syntax = "proto3";
option go_package = "github.com/tudoresan/Go-Message-App/protos/protoMessage";


service MessageService {
  rpc ConnectUsers (stream Message) returns (stream Message) {}
  rpc PermissionToConnect (Message) returns (Message) {}
  rpc ConnectToChannel (Message) returns (Message) {}
  rpc Ping(Empty) returns (PingResponse) {}
  rpc ConnectToMessageChannel (User) returns (stream Message) {}
  rpc OnlineUsers (Empty) returns (OnlineUsersResp) {}
  rpc SendMessage (Message) returns (SendMessageResp) {}
}

message SendMessageResp {
  string status = 1;
}

message OnlineUsersResp {
  repeated User users = 1; 
}

message User {
  string username = 1;
  string id = 2;
}

message Message {
    string id = 1;
    string from = 2;
    string fromUserId = 3;
    string to = 4;
    string toUserId = 5;
    int64 timestamp = 6;
}

message PingResponse {
  string message = 1;
}

message Empty {}